--- a/lesson_npm/views/form_lesson/12:15lesson_homework_post.ejs
+++ b/lesson_npm/views/form_lesson/12:15lesson_homework_post.ejs
@@ -2,18 +2,18 @@
 <html>
 
   <head>
-    <title>FORMの練習</title>
+    <title>ユーザー情報表示</title>
   </head>
 
   <body>
-    <h1>ユーザーが入力した情報を送る</h1>
+    <h1>会員管理システム</h1>
     <table>
       <tr>
-        <td>テキストボックス</td>
+        <td>名前</td>
         <td><%= user_name  %></td>
       </tr>
       <tr>
-        <td>ラジオボタン</td>
+        <td>性別</td>
         <td><%= user_type  %></td>
       </tr>
       <tr>
@@ -21,7 +21,7 @@
         <td><%= user_type2  %></td>
       </tr>
       <tr>
-        <td>チェックボックス</td>
+        <td>スキル</td>
         <td><%= check  %></td>
       </tr>
     </table>
